Fix alignment of flags in mobile

--- a/app/assets/stylesheets/responsive.scss
+++ b/app/assets/stylesheets/responsive.scss
@@ -126,6 +126,7 @@
     li {
       margin-left: 8%;
       margin-right: 0;
+      float: left;
     }
   }
 }
